--- a/app/views/discussions/_location.html.erb
+++ b/app/views/discussions/_location.html.erb
@@ -1,2 +1,1 @@
-<% region_list = ['Andaman and Nicobar Islands', 'Andhra Pradesh', 'Arunachal Pradesh ', 'Assam', 'Bihar', 'Chandigarh', 'Chhattisgarh', 'Dadra and Nagar Haveli', 'Daman and Diu', 'Delhi', 'Goa', 'Gujarat', 'Haryana', 'Himachal Pradesh', 'Jammu and Kashmir', 'Jharkhand', 'Karnataka', 'Kerala', 'Lakshadweep', 'Madhya Pradesh', 'Maharashtra', 'Manipur', 'Meghalaya', 'Mizoram', 'Nagaland', 'Odisha', 'Puducherry', 'Punjab', 'Rajasthan', 'Sikkim', 'Tamil Nadu', 'Telangana', 'Tripura', 'Uttar Pradesh', 'Uttarakhand', 'West Bengal'] %>
-<%= form.select :region, region_list, selected: "Uttarakhand" %>
+<%= select_tag :region_id, options_for_select(@regions.collect{ |r| [r.name, r.id] }, :region_id), class: "border-secondary border-3 form-select form-select-sm" %>
