--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -1,15 +1,16 @@
 <div class="col-3"></div>
 <div class="col-9 d-flex justify-content-evenly">
   <div class="col-8 my-5 px-5">
-    <p class="d-flex justify-content-between">
-      <span class="fs-4 fw-bold">Discussions</span>
-      <span class="col-5">
-          <%= select_tag :region_id, options_for_select(@regions.collect{ |r| [r.name, r.id] }, :region_id), { class: "border-secondary border-3 form-select form-select-sm", onchange: "changeRegion(Number(this.value))" } %>
-      </span>
-    </p>
+    <div class="d-flex justify-content-between">
+      <div class="fs-4 fw-bold">Discussions</div>
+      <div class="col-5">
+          <%= render "discussions/location" %>
+      </div>
+    </div>
     <br>
-    <div id="let-see"></div>
-    <%= render "discussions/discussions" %>
+    <div id="dicussion-selector">
+      <%= render partial: "discussions/discussions", locals: { discussions: @discussions } %>
+    </div>
   </div>
   <div class="col-4"></div>
   <div class="border-start border-dark border-3 col-3 py-5 px-4 position-fixed" style="height: 100% !important; top: 0; right: 0;">
