--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -26,7 +26,7 @@
     </li>
     <br>
     <li class="nav-item">
-      <%= active_link_to "Profile", profiles_path %>
+      <%= active_link_to "Profile", profile_path %>
     </li>
     <br>
   </ul>
