--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,21 @@
 @import "bootstrap";
 
-html, body {
-    height: 100% !important;
+html,
+body {
+  height: 100% !important;
 }
 
 * {
-    overflow-x: hidden;
-    max-width: 100% !important;
+  overflow-x: hidden;
+  max-width: 100% !important;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+*::-webkit-scrollbar {
+  display: none;
 }
 
 .hide {
-    display: none !important;
+  display: none !important;
 }
