profile section final update

--- a/app/views/profiles/_connect.html.erb
+++ b/app/views/profiles/_connect.html.erb
@@ -1,5 +1,5 @@
 <% if val %>
-    <%= button_to "Connected", "/profile/#{@person.id}", local: false, class: "btn btn-success disabled" %>
+    <%= button_to "Connected", "/profile/#{@person.id}", class: "btn btn-success disabled" %>
 <% else %>
     <%= button_to "Connect", "/profile/#{@person.id}", local: false, class: "btn btn-primary" %>
 <% end %>
