--- a/app/views/discussions/_trending.html.erb
+++ b/app/views/discussions/_trending.html.erb
@@ -1,10 +1,10 @@
 <div class="fs-4 text-center fw-bold">Trending on Discussion</div>
 <br />
 <div class="container border border-secondary border-3 pt-4 fw-bold rounded shadow">
-  <ul class="text-start p-0" style="list-style-type: '#'">
+  <ul class="text-start p-0 text-center" style="list-style-type: '#'">
     <% @discussions.each do |discussion| %>
         <li>
-            &ensp;<%= link_to discussion.content, discussion, class: "text-decoration-none" %>
+            <%= link_to discussion.content, discussion, class: "text-decoration-none" %>
         </li>
         <br />
     <% end %>
