updates for messages section

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,7 +1,9 @@
 <div class="col-3"></div>
 <div class="col-9 d-flex">
     <div class="col-8 p-5">
-        <p class="fs-4 fw-bold">Conversations</p>
+        <p class="fs-4 fw-bold">Messages</p>
+        <br />
+        <%= render "messages/messages" %>
         <br />
         <%= render "messages/conversations" %>
     </div>
