--- a/app/views/messages/_new.html.erb
+++ b/app/views/messages/_new.html.erb
@@ -1,7 +1,10 @@
-<%= form_with model: @message, local: false, class: "" do |f| %>
-  <%= f.text_field :name, class: "form-control", autocomplete: 'off' %>
-  <%= f.text_field :content, class: "form-control", autocomplete: 'off' %>
-  <%= f.text_field :sender_id, class: "form-control", autocomplete: 'off' %>
-  <%= f.text_field :receiver_id, class: "form-control", autocomplete: 'off' %>
-  <%= f.submit data: { disable_with: false } %>
+<%= form_with url: message_path(params[:id]), method: "patch", class: "col-6 bg-light border-top border-2 border-secondary py-3 d-flex justify-content-evenly" do |f| %>  
+  <%= f.hidden_field :sender_id, value: Current.user.id %>
+  <%= f.hidden_field :receiver_id, value: params[:id] %>
+  <div class="col-9 col-md-8">
+    <%= f.text_field :content, class: "form-control border-dark", autocomplete: 'off' %>
+  </div>
+  <div class="text-center">
+    <%= f.submit "Send", class: "btn btn-primary" %>
+  </div>
 <% end %>
